--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "user-service",
-    "description": "user-service",
+    "name": "vehicle",
+    "description": "vehicle",
     "version": "0.0.0",
     "author": {
         "name": "serandives",
