--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "email": "serandives@gmail.com"
     },
     "dependencies": {
-        "mongoose": "5.*",
+        "mongoose": "5.1.8",
         "logger": "serandules/logger#master",
         "validators": "serandules/validators#master",
         "model-locations": "serandules/model-locations#master",
